# ZetaRF

./: .gitignore  CMakeLists.txt  README.md  Si4455_FuncInfo.pxd  Si4455_PartInfo.pxd  ZetaRF433_PresetPins.pxd  example_read.py  example_send.py  main.py  setup.py  zetarf433.pyx
examples/SimpleRxTx/: CMakeLists.txt  SimpleRxTx.cpp
src/: CMakeLists.txt  ZetaRF.h  zetarf_hal.h  zetarf_radio.h
